--- a/models/yolov5s copy.yaml
+++ b/models/yolov5s copy.yaml
@@ -13,13 +13,13 @@ anchors:
 backbone:
   # [from, number, module, args]
   [[-1, 1, Focus, [64, 3]],  # 0-P1/2
-   [-1, 1, Conv_CBAM, [128, 3, 2]],  # 1-P2/4
+   [-1, 1, Conv, [128, 3, 2]],  # 1-P2/4
    [-1, 3, C3, [128]],
-   [-1, 1, Conv_CBAM, [256, 3, 2]],  # 3-P3/8
+   [-1, 1, Conv, [256, 3, 2]],  # 3-P3/8
    [-1, 9, C3, [256]],
-   [-1, 1, Conv_CBAM, [512, 3, 2]],  # 5-P4/16
+   [-1, 1, Conv, [512, 3, 2]],  # 5-P4/16
    [-1, 9, C3, [512]],
-   [-1, 1, Conv_CBAM, [1024, 3, 2]],  # 7-P5/32
+   [-1, 1, Conv, [1024, 3, 2]],  # 7-P5/32
    [-1, 1, SPP, [1024, [5, 9, 13]]],
    [-1, 3, C3, [1024, False]],  # 9
   ]
