--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ VOC/
 # Neural Network weights -----------------------------------------------------------------------------------------------
 *.weights
 *.pt
+*.pkl
 *.onnx
 *.mlmodel
 *.torchscript
