--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ storage.googleapis.com
 runs/*
 data/*
 
+!weights/LPRNet__iteration_2000.pth
+!weights/YOLOV5BEST.pt
 
 pycocotools/*
 results*.txt
