--- a/.dockerignore
+++ b/.dockerignore
@@ -52,6 +52,8 @@ wheels/
 wandb/
 .installed.cfg
 *.egg
+log.md
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
